--- a/Dockerfile.optimized
+++ b/Dockerfile.optimized
@@ -1,4 +1,4 @@
-# Build stage
+# Optimized Dockerfile for faster builds on low-resource systems
 FROM node:20-alpine AS builder
 
 WORKDIR /app
@@ -24,14 +24,13 @@ RUN npm ci --prefer-offline --no-audit --progress=false --loglevel=error || \
      npm cache clean --force && \
      npm ci --prefer-offline --no-audit --progress=false --loglevel=error)
 
-# Copy source code
+# Copy source code (only what's needed)
 COPY . .
 
-# Build with optimizations (skip type checking for faster builds)
+# Build with optimizations
 ENV NODE_ENV=production
 ENV NEXT_TELEMETRY_DISABLED=1
-# Use fast build script that skips type checking
-RUN npm run build:fast
+RUN npm run build
 
 # Production stage
 FROM node:20-alpine AS runner
@@ -39,6 +38,7 @@ FROM node:20-alpine AS runner
 WORKDIR /app
 
 ENV NODE_ENV=production
+ENV NEXT_TELEMETRY_DISABLED=1
 
 # Install wget for healthcheck
 RUN apk add --no-cache wget
@@ -48,7 +48,7 @@ RUN addgroup --system --gid 1001 nodejs && \
     adduser --system --uid 1001 nextjs
 
 # Copy necessary files from builder
-COPY --from=builder /app/public ./public
+COPY --from=builder --chown=nextjs:nodejs /app/public ./public
 COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
@@ -59,6 +59,5 @@ EXPOSE 3000
 ENV PORT=3000
 ENV HOSTNAME="0.0.0.0"
 
-# Use the standalone server
 CMD ["node", "server.js"]
 
