--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "NODE_ENV=production next build",
+    "build:fast": "NODE_ENV=production SKIP_TYPE_CHECK=true next build",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
@@ -51,7 +52,7 @@
     "katex": "^0.16.11",
     "lucide-react": "^0.475.0",
     "marked": "^14.0.0",
-    "next": "15.3.3",
+    "next": "^15.5.7",
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
